<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/icon_back_white"
                android:drawablePadding="7dp"
                android:drawableStart="@drawable/icon_back_white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="7dp"
                android:padding="10dp"
                android:text="@string/login_by_pwd"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_register_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/not_account_register_now"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/input_bg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <!-- 账号密码部分布局 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="135dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_send_short_message"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_text"
                    android:visibility="gone" />

                <!-- 账号 -->
                <LinearLayout
                    android:id="@+id/ll_about_account"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:src="@drawable/phone_icon" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:background="@null"
                        android:hint="@string/please_input_phone_number"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/mid_small_text" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white" />

            </LinearLayout>

            <!-- 密码 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/img_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:src="@drawable/password_icon" />

                    <EditText
                        android:id="@+id/et_pwd"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/img_password"
                        android:layout_toRightOf="@+id/img_password"
                        android:background="@null"
                        android:hint="@string/please_input_password"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/mid_small_text" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="#FFFFFF" />

            </LinearLayout>

            <ImageView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_huisedenglu"
                android:padding="13dp" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="7dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>